# ChangeLog for sys-apps/gawk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.114 2007/10/11 06:14:38 tgall Exp $

  11 Oct 2007; Tom Gall <tgall@gentoo.org> gawk-3.1.5-r5.ebuild:
  stable on ppc64, bug #195212

  10 Oct 2007; Lars Weiler <pylon@gentoo.org> gawk-3.1.5-r5.ebuild:
  stable ppc, bug #195212

  09 Oct 2007; Raúl Porcel <armin76@gentoo.org> gawk-3.1.5-r5.ebuild:
  alpha/ia64/sparc stable wrt #195212

  09 Oct 2007; Christian Faulhammer <opfer@gentoo.org> gawk-3.1.5-r5.ebuild:
  stable x86, bug 195212

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> gawk-3.1.5-r5.ebuild:
  Stable for HPPA (bug #195212).

  09 Oct 2007; Christoph Mende <angelos@gentoo.org> gawk-3.1.5-r5.ebuild:
  Stable on amd64 wrt bug #195212

*gawk-3.1.5-r5 (25 Aug 2007)

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org>
  +files/gawk-3.1.5-freewstr2.patch, +files/gawk-3.1.5-ipv6.patch,
  +files/gawk-3.1.5-mbread.patch, +gawk-3.1.5-r5.ebuild:
  Snipe some fixes from Fedora.

*gawk-3.1.5-r4 (12 Jul 2007)

  12 Jul 2007; Roy Marples <uberlord@gentoo.org> +gawk-3.1.5-r4.ebuild:
  Move gawk to /usr/bin for non GNU userlands.

  09 Jul 2007; Jeroen Roovers <jer@gentoo.org> gawk-3.1.5-r3.ebuild:
  Stable for HPPA (bug #184465).

  08 Jul 2007; Christoph Mende <angelos@gentoo.org> gawk-3.1.5-r3.ebuild:
  Stable on amd64 wrt bug #184465

  13 Jun 2007; Raúl Porcel <armin76@gentoo.org> gawk-3.1.5-r3.ebuild:
  alpha stable

  24 Apr 2007; Alexander Færøy <eroyf@gentoo.org> gawk-3.1.5-r3.ebuild:
  Stable on MIPS.

  23 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> gawk-3.1.5-r3.ebuild:
  Stable on sparc

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> gawk-3.1.5-r3.ebuild:
  Stable on ppc64

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org> gawk-3.1.5-r3.ebuild:
  Stable on ppc.

  21 Mar 2007; Raúl Porcel <armin76@gentoo.org> gawk-3.1.5-r3.ebuild:
  x86 stable

*gawk-3.1.5-r3 (12 Jan 2007)
