@@ -20,7 +20,6 @@ AUX gawk-3.1.5-utf-8-strcat.patch 1456 RMD160 4104db0c27585f6c160adeca9b432ff5f8
 AUX gawk-3.1.5-wconcat.patch 495 RMD160 29f5eea5b300d8efc482e960b257292e5e5b19f8 SHA1 a40e527ef2741d8dea4e481852f887097dd2c921 SHA256 bc812044e12c291c0419853e3862e5dad60c17bfee8cffeb09135995b0694315
 DIST gawk-3.1.5.tar.gz 2310919 RMD160 8d875f4ea9e9ef5c932468cf43c691f6e082b197 SHA1 6cb385b4bc33780a5a4288b787523cbd4a30a900 SHA256 463dcb9d0ca398b1d4f5a332f6cd9cec56441265fca616f2ea1b44d459e9f0f8
 EBUILD gawk-3.1.5-r03.1.ebuild 3588 RMD160 50d5517bb803c0ed2f210a4eca6c1861b706bd8a SHA1 7b72f4d7f71c9fb84d5da4a4d0e698a132b9f6f5 SHA256 1cb4acd3b73588a072cb8ca6b7e98acb3d80b6dd8e648ae066fc48972d1dd768
-EBUILD gawk-3.1.5-r05.1.ebuild 3950 RMD160 9e70a3f6d2654ee5ed945025e6fe4ecfadda2e78 SHA1 2d143937d8cf7279153ee292f53eb083a5a7785b SHA256 1fe70d909955d77fa9c9e9d6567eb4a44dbf4a3e7cb8c5245919d03529b9e0da
-EBUILD gawk-3.1.5-r4.ebuild 3809 RMD160 4687aac5ba9562ec0589694e559cce1d0044e8b4 SHA1 6b5dc0b00d5e61cfba8fa667f9b01f3ce41c6fe8 SHA256 960807655f13a0edb43a204fdae6edd9aac4cccae12e65c9d0f806a8917edfc4
-MISC ChangeLog 16280 RMD160 6bfe1aee7ba03064397fe8546eff25cf716b1438 SHA1 5070953c5ce2fc941693e03c6d1009b917b5147c SHA256 51858be74f075c935d9dcbf93ec9371adaf8cf8f342470186d28f2c29ff036c7
+EBUILD gawk-3.1.5-r05.1.ebuild 3950 RMD160 a7551307fbc512af84e2b93c1356322394a72b1e SHA1 441f3f136ccd6c0aa546c7716e0ad98716ba4501 SHA256 4c1878436afdc053b223970fd11d50a58c2a4996f8eba0decb131e23eff047d3
+MISC ChangeLog 16382 RMD160 4c21e3dacf8844f6e1d9ebd4e9f1a73902a6e2f9 SHA1 e841ace4e8d2ad203ab4a9e78e94788809eeec17 SHA256 f9051bbce47861b5f5a411148884826e4b29e062007d6af1f9a82a802607f7bc
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
